added SleepCreatureAction and RoamingHelper, algorithms reworked